--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main>
     <div class="card">
       <div class="qr-code-img">
-        <img src="/images/image-qr-code.png" alt="QR Image Error">
+        <img src="image-qr-code.png" alt="QR Image Error">
       </div>
       <div class="sub-card-container">
         <div class="name"><p>
